@@ -5,16 +5,13 @@ import com.squareup.moshi.Moshi;
 import com.squareup.moshi.Types;
 import java.io.IOException;
 import java.lang.reflect.Type;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.net.*;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import okio.Buffer;
 import spark.Request;
 import spark.Response;
 import spark.Route;
@@ -22,7 +19,7 @@ import spark.Route;
 // TODO: More descriptive exceptions
 
 public class BroadbandHandler implements Route {
-  private Map<String, Integer> stateCodes;
+  private Map<String, String> stateCodes;
   private boolean haveStateCodes;
 
   public BroadbandHandler() {
@@ -40,15 +37,13 @@ public class BroadbandHandler implements Route {
     Map<String, Object> responseData = new HashMap<>();
 
     try {
-      String censusData = this.censusRequest(state, county);
-
-      CensusData censusResponse = CensusAPIUtility.deserializeCensusData(censusData);
+      CensusData censusData = this.censusRequest(state, county);
 
       String dateAndTime = getTime();
 
       responseData.put("result", "success");
       responseData.put("date and time", dateAndTime);
-      responseData.put("census data", censusResponse);
+      responseData.put("census data", censusData);
 
     } catch (Exception e) {
       e.printStackTrace();
@@ -58,19 +53,36 @@ public class BroadbandHandler implements Route {
     return responseData;
   }
 
-  private String censusRequest(String state, String county)
+  private CensusData censusRequest(String state, String county)
       throws URISyntaxException, IOException, InterruptedException, StateNotFoundException,
-          CountyNotFoundException {
+          CountyNotFoundException, DatasourceException {
 
-    List<Integer> codes = this.getCodes(state, county);
-    System.out.println(codes);
+    List<String> codes = this.getCodes(state, county);
 
-    return state + county;
+    URL requestURL =
+        new URL(
+            "https",
+            "api.census.gov",
+            "/data/2021/acs/acs1/subject/variables?get=NAME,S2802_C03_022E&for=county:"
+                + codes.get(1)
+                + "&in=state:"
+                + codes.get(0));
+    HttpURLConnection clientConnection = connect(requestURL);
+    Moshi moshi = new Moshi.Builder().build();
+
+    Type listListString = Types.newParameterizedType(List.class, List.class, String.class);
+    JsonAdapter<List<List<String>>> adapter = moshi.adapter(listListString);
+
+    List<List<String>> results =
+        adapter.fromJson(new Buffer().readFrom(clientConnection.getInputStream()));
+    clientConnection.disconnect();
+
+    return new CensusData(state, county, results.get(1).get(1));
   }
 
-  private List<Integer> getCodes(String state, String county)
+  private List<String> getCodes(String state, String county)
       throws URISyntaxException, IOException, InterruptedException, StateNotFoundException,
-          CountyNotFoundException {
+          CountyNotFoundException, DatasourceException {
     if (!this.haveStateCodes) {
       this.fetchAllStateCodes();
       this.haveStateCodes = true;
@@ -79,59 +91,54 @@ public class BroadbandHandler implements Route {
     if (!this.stateCodes.containsKey(state)) {
       throw new StateNotFoundException("Could not find state: " + state);
     }
-    int stateCode = this.stateCodes.get(state);
+    String stateCode = this.stateCodes.get(state);
 
-    String uri =
-        "https://api.census.gov/data/2010/dec/sf1?get=NAME&for=county:*&in=state:" + stateCode;
-    HttpRequest buildCensusAPIRequest = HttpRequest.newBuilder().uri(new URI(uri)).GET().build();
-
-    // Send that API request then store the response in this variable.
-    HttpResponse<String> sentCensusAPIResponse =
-        HttpClient.newBuilder()
-            .build()
-            .send(buildCensusAPIRequest, HttpResponse.BodyHandlers.ofString());
-
+    URL requestURL =
+        new URL(
+            "https",
+            "api.census.gov",
+            "/data/2010/dec/sf1?get=NAME&for=county:*&in=state:" + stateCode);
+    HttpURLConnection clientConnection = connect(requestURL);
     Moshi moshi = new Moshi.Builder().build();
 
-    record County(String NAME, int county) {}
-    Type type = Types.newParameterizedType(List.class, County.class);
-    JsonAdapter<List<County>> adapter = moshi.adapter(type);
+    Type listListString = Types.newParameterizedType(List.class, List.class, String.class);
+    JsonAdapter<List<List<String>>> adapter = moshi.adapter(listListString);
 
-    List<County> counties = adapter.fromJson(sentCensusAPIResponse.body());
+    List<List<String>> counties =
+        adapter.fromJson(new Buffer().readFrom(clientConnection.getInputStream()));
+    clientConnection.disconnect();
 
-    int countyCode = -1;
-    for (County cont : counties) {
-      if (cont.NAME.equals(county)) {
-        countyCode = cont.county;
+    String countyCode = "";
+    String countyState = county + ", " + state;
+    for (List<String> list : counties) {
+      if (list.get(0).equals(countyState)) {
+        countyCode = list.get(2);
       }
     }
-    if (countyCode < 0) {
+    if (!(countyCode.length() > 0)) {
       throw new CountyNotFoundException("Could not find county: " + county);
     }
 
     return List.of(stateCode, countyCode);
   }
 
-  private void fetchAllStateCodes() throws URISyntaxException, IOException, InterruptedException {
-    String uri = "https://api.census.gov/data/2010/dec/sf1?get=NAME&for=state:*";
-    HttpRequest buildCensusAPIRequest = HttpRequest.newBuilder().uri(new URI(uri)).GET().build();
-
-    // Send that API request then store the response in this variable.
-    HttpResponse<String> sentCensusAPIResponse =
-        HttpClient.newBuilder()
-            .build()
-            .send(buildCensusAPIRequest, HttpResponse.BodyHandlers.ofString());
-
+  private void fetchAllStateCodes()
+      throws URISyntaxException, IOException, InterruptedException, DatasourceException {
+    URL requestURL = new URL("https", "api.census.gov", "/data/2010/dec/sf1?get=NAME&for=state:*");
+    HttpURLConnection clientConnection = connect(requestURL);
     Moshi moshi = new Moshi.Builder().build();
 
-    record State(String NAME, int code) {}
-    Type type = Types.newParameterizedType(List.class, State.class);
-    JsonAdapter<List<State>> adapter = moshi.adapter(type);
+    Type listListString = Types.newParameterizedType(List.class, List.class, String.class);
+    JsonAdapter<List<List<String>>> adapter = moshi.adapter(listListString);
 
-    List<State> states = adapter.fromJson(sentCensusAPIResponse.body());
-    for (State state : states) {
-      this.stateCodes.put(state.NAME, state.code);
+    List<List<String>> results =
+        adapter.fromJson(new Buffer().readFrom(clientConnection.getInputStream()));
+    clientConnection.disconnect();
+
+    for (List<String> list : results) {
+      this.stateCodes.put(list.get(0), list.get(1));
     }
+    this.stateCodes.remove("NAME");
   }
 
   private String getTime() {
@@ -145,5 +152,21 @@ public class BroadbandHandler implements Route {
     String formattedDateTime = currentDateTime.format(formatter);
 
     return formattedDateTime;
+  }
+
+  /**
+   * Private helper method; throws IOException so different callers can handle differently if
+   * needed.
+   */
+  private static HttpURLConnection connect(URL requestURL) throws DatasourceException, IOException {
+    URLConnection urlConnection = requestURL.openConnection();
+    if (!(urlConnection instanceof HttpURLConnection))
+      throw new DatasourceException("unexpected: result of connection wasn't HTTP");
+    HttpURLConnection clientConnection = (HttpURLConnection) urlConnection;
+    clientConnection.connect(); // GET
+    if (clientConnection.getResponseCode() != 200)
+      throw new DatasourceException(
+          "unexpected: API connection not success status " + clientConnection.getResponseMessage());
+    return clientConnection;
   }
 }
